Update package.json & folder names

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "standard": "^17.1.0"
   },
   "eslintConfig": {
-    "extends": "./node_modules/standard/eslintrc.json"
+    "extends": "standard",
+    "rules": {
+      "react/prop-types": "off"
+    }
   }
 }
